# talon-tools

./: .gitignore  LICENSE  README.md  credentials.yaml.example  pyproject.toml  talon-tools.ps1  talon-tools.sh
docs/: credentials.md  mcp-server.md
skills/: README.md
skills/atlassian/: SKILL.md
skills/catholic/: SKILL.md
skills/chrome-bookmarks/: SKILL.md
skills/daily-readings/: SKILL.md
skills/docreader/: SKILL.md
skills/earthquake/: SKILL.md
skills/facebook/: SKILL.md
skills/google/: SKILL.md
skills/microsoft/: SKILL.md
skills/notion/: SKILL.md
skills/search/: SKILL.md
skills/servicenow/: SKILL.md
skills/spotify/: SKILL.md
skills/terminal/: SKILL.md
skills/wa/: SKILL.md
skills/workspace/: SKILL.md
skills/x/: SKILL.md
talon_tools/: __init__.py  cli.py  credential_store.py  credentials.py  mcp_server.py  provider.py  types.py
talon_tools/atlassian/: SKILL.md  __init__.py  client.py  confluence_parse.py  onboarding.py  tools.py
talon_tools/catholic/: tools.py
talon_tools/chrome_bookmarks/: bookmarks.py  tools.py
talon_tools/daily_readings/: SKILL.md  __init__.py
talon_tools/docenter/: __init__.py  client.py  onboarding.py  tools.py
talon_tools/docreader/: SKILL.md  __init__.py  reader.py  tools.py
talon_tools/earthquake/: __init__.py  client.py  dedup.py  tools.py
talon_tools/facebook/: __init__.py  auth.py  client.py  onboarding.py  parser.py  tools.py
talon_tools/google/: SKILL.md  __init__.py  auth.py  calendar.py  contacts.py  credential_store.py  docs.py  drive.py  gmail.py  keep.py  maps.py  onboarding.py  photos.py  setup.py  setup_step.py  sheets.py  tasks.py  tools.py  youtube.py
talon_tools/http/: __init__.py  rendered.py  tools.py
talon_tools/jenkins/: __init__.py  client.py  onboarding.py  tools.py
talon_tools/mcp/: __init__.py  client.py  oauth.py  tools.py
talon_tools/microsoft/: SKILL.md  __init__.py  auth.py  calendar.py  onboarding.py  onedrive.py  outlook.py  teams.py  tools.py
talon_tools/notion/: SKILL.md  __init__.py  client.py  onboarding.py  tools.py
talon_tools/onboarding/: __init__.py  __main__.py  base.py  cookies.py  installer.py  registry.py  runner.py  tools.py
talon_tools/providers/: __init__.py  copilot.py  gemini.py  ollama.py
talon_tools/search/: SKILL.md  __init__.py  duckduckgo.py  tools.py
talon_tools/servicenow/: SKILL.md  __init__.py  onboarding.py  tools.py
talon_tools/spotify/: SKILL.md  __init__.py  auth.py  client.py  onboarding.py  setup.py  tools.py
talon_tools/tarantula/: __init__.py  tools.py
talon_tools/terminal/: __init__.py  shell.py  tools.py
talon_tools/travel/: __init__.py  currency.py  flights.py  hotels.py  tools.py
talon_tools/wa/: SKILL.md  __init__.py  client.py  onboarding.py  tools.py
talon_tools/weather/: __init__.py  client.py  tools.py
talon_tools/workspace/: SKILL.md  __init__.py  fs.py  tools.py
talon_tools/x/: SKILL.md  __init__.py  auth.py  client.py  endpoints.py  onboarding.py  parser.py  tools.py
