[project]
name = "talon-tools"
version = "0.1.0"
description = "Unified toolkit for building AI-powered agents — Google, Microsoft, social media, productivity, and more"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Chris Prakoso" },
]
keywords = ["ai", "agent", "tools", "llm", "google", "microsoft", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["pyyaml>=6.0", "truststore>=0.9", "cryptography>=43.0", "keyring>=25.0"]

[project.urls]
Homepage = "https://github.com/bingkil/talon-tools"
Repository = "https://github.com/bingkil/talon-tools"
Issues = "https://github.com/bingkil/talon-tools/issues"

[project.optional-dependencies]
google = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "gkeepapi>=0.17.1",
]
microsoft = [
    "msal>=1.28",
    "httpx>=0.27",
]
search = ["ddgs"]
facebook = ["playwright", "browser-cookie3"]
notion = ["notion-client>=3.0.0"]
atlassian = ["atlassian-python-api>=3.41"]
docreader = [
    "pypdf>=6.10.2",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "python-pptx>=1.0",
]
x = ["httpx", "browser-cookie3"]
mcp = ["httpx"]
gemini = ["google-genai>=1.0", "openai>=1.0"]
jenkins = ["httpx"]
servicenow = ["aiohttp"]
catholic = ["aiohttp"]
spotify = ["httpx"]
youtube = ["yt-dlp>=2024.0", "httpx"]
wa = []  # no Python deps — wraps wacli binary
all = [
    "talon-tools[google]",
    "talon-tools[gemini]",
    "talon-tools[microsoft]",
    "talon-tools[search]",
    "talon-tools[facebook]",
    "talon-tools[notion]",
    "talon-tools[atlassian]",
    "talon-tools[docreader]",
    "talon-tools[x]",
    "talon-tools[mcp]",
    "talon-tools[servicenow]",
    "talon-tools[catholic]",
    "talon-tools[spotify]",
    "talon-tools[youtube]",
    "talon-tools[jenkins]",
    "talon-tools[wa]",
]

[project.scripts]
talon-tools = "talon_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
