[project]
name = "talon-tools"
version = "0.1.0"
description = "Unified toolkit for building AI-powered agents — Google, Microsoft, social media, productivity, and more"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Chris Prakoso" },
]
keywords = ["ai", "agent", "tools", "llm", "google", "microsoft", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["talon", "pyyaml>=6.0", "truststore>=0.9", "cryptography>=43.0", "keyring>=25.0"]

[project.urls]
Homepage = "https://github.com/bingkil/talon-tools"
Repository = "https://github.com/bingkil/talon-tools"
Issues = "https://github.com/bingkil/talon-tools/issues"

[project.optional-dependencies]
google = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "gkeepapi>=0.17.1",
]
microsoft = [
    "msal>=1.28",
    "httpx>=0.27",
]
search = ["ddgs"]
facebook = ["playwright", "browser-cookie3"]
notion = ["notion-client>=3.0.0"]
atlassian = ["atlassian-python-api>=3.41"]
docreader = [
    "liteparse>=2.0",
    "pypdf>=6.10.2",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "python-pptx>=1.0",
]
x = ["httpx", "browser-cookie3"]
mcp = ["httpx", "mcp>=1.0"]
gemini = ["google-genai>=1.0", "openai>=1.0"]
jenkins = ["httpx"]
servicenow = ["aiohttp", "beautifulsoup4"]
catholic = ["aiohttp"]
spotify = ["httpx"]
docenter = ["aiohttp", "PyJWT", "beautifulsoup4"]
youtube = ["yt-dlp>=2024.0", "httpx"]
wa = []  # no Python deps — wraps wacli binary
weather = []  # no deps — uses stdlib urllib
travel = []  # no deps — uses stdlib urllib
all = [
    "talon-tools[google]",
    "talon-tools[gemini]",
    "talon-tools[microsoft]",
    "talon-tools[search]",
    "talon-tools[facebook]",
    "talon-tools[notion]",
    "talon-tools[atlassian]",
    "talon-tools[docreader]",
    "talon-tools[x]",
    "talon-tools[mcp]",
    "talon-tools[servicenow]",
    "talon-tools[catholic]",
    "talon-tools[spotify]",
    "talon-tools[docenter]",
    "talon-tools[youtube]",
    "talon-tools[jenkins]",
    "talon-tools[wa]",
    "talon-tools[weather]",
    "talon-tools[travel]",
]

[project.scripts]
talon-tools = "talon_tools.cli:main"

# Tool bundles discoverable by talon-oss (and any other framework) via
# importlib.metadata entry_points(group="talon.tools").
# Convention: build_tools(**kwargs) accepts agent_dir, agent_name, cfg as kwargs.
[project.entry-points."talon.tools"]
google     = "talon_tools.google.tools:build_tools"
gmail      = "talon_tools.google.tools:gmail_tools"
gcalendar  = "talon_tools.google.tools:calendar_tools"
microsoft  = "talon_tools.microsoft.tools:build_tools"
x          = "talon_tools.x.tools:build_tools"
facebook   = "talon_tools.facebook.tools:build_tools"
notion     = "talon_tools.notion.tools:build_tools"
atlassian  = "talon_tools.atlassian.tools:build_tools"
terminal   = "talon_tools.terminal.tools:build_tools"
docreader  = "talon_tools.docreader.tools:build_tools"
servicenow = "talon_tools.servicenow.tools:build_tools"
catholic   = "talon_tools.catholic.tools:build_tools"
jenkins    = "talon_tools.jenkins.tools:build_tools"
docenter   = "talon_tools.docenter.tools:build_tools"
earthquake = "talon_tools.earthquake.tools:build_tools"
spotify    = "talon_tools.spotify.tools:build_tools"
weather    = "talon_tools.weather.tools:build_tools"
travel     = "talon_tools.travel.tools:build_tools"
http       = "talon_tools.http.tools:build_tools"
search     = "talon_tools.search.tools:build_tools"
wa         = "talon_tools.wa.tools:build_tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
